[package]
name = "lastDay"
version = "0.1.0"
authors = ["SET001 <settydark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.15.1", features = ["specs-derive"] }
ggez = "0.5.1"
ggez-goodies = { git="https://github.com/ggez/ggez-goodies", branch = "master"}
nalgebra = "0.19.0"
nalgebra-glm = "0.3.0"
mint = "0.5.4"
cgmath = {version= "0.17", features=["mint"]}
rand = "0.7.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[features]
default = ["showDebugMeshes"]
showDebugMeshes= []
